| Bug #21339 | explain partitions leads to server crash | ||
|---|---|---|---|
| Submitted: | 29 Jul 2006 8:35 | Modified: | 2 Sep 2006 5:01 |
| Reporter: | Yuan WANG | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Partitions | Severity: | S2 (Serious) |
| Version: | 5.1.11/5.1BK | OS: | Linux (linux) |
| Assigned to: | Mikael Ronström | CPU Architecture: | Any |
[29 Jul 2006 13:23]
MySQL Verification Team
Back trace on Suse 10 32-bit
Attachment: bt-21339.txt (text/plain), 7.88 KiB.
[29 Jul 2006 13:24]
MySQL Verification Team
Thank you for the bug report. I was able to repeat (back trace attached).
[5 Aug 2006 20:26]
Mikael Ronström
There was a general missing check for last partition in the endpoint check for the right range.
[8 Aug 2006 13:25]
Mikael Ronström
Reviewed by evgen
[15 Aug 2006 15:30]
Sergey Petrunya
I have reviewed this bug as second reviewer, ok to push.
[31 Aug 2006 20:41]
Mikael Ronström
fixed in 5.1-kt team tree
[1 Sep 2006 7:56]
Mikael Ronström
Patch will appear in 5.1.12
[2 Sep 2006 5:01]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.12 changelog.

Description: 'explain partitions' a query on a table partitioned by a column of Date sometimes cause server to crash. How to repeat: create table part_date1(a date) engine = innodb partition by range (year(a)) ( partition p0 values less than (2006), partition p1 values less than (2007)); explain partitions select * from part_date1 where a between '2006-01-01' and '2007-06-01'; Then the server will crash.