BUG#21339: Crash at EXPLAIN PARTITIONS Caused by missing check for end of partitions in prune range check